# rl-overlay-hub

./: .gitignore  404.html  CONTRIBUTING.md  README.md  build.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml
api/: index.html
app/: config.py  constants.py  deps.py  logger.py  main.py  overlay_registry.py  overlay_server.py  rlstats_client.py  runtime.py  schemas.py  session_storage.py  state_manager.py  storage.py  websocket_events.py
app/routers/: overlay_routes.py  preview_routes.py  rl_config_routes.py  session_routes.py  state_routes.py  system_routes.py
community-overlays/: registry.json
community-overlays/goal-banner/: index.html  manifest.json  script.js  style.css
community-overlays/minimal-scoreboard/: index.html  manifest.json  script.js  style.css
creator-template/: index.html  manifest.json  script.js  style.css
docs/: api.md  index.md  manifest.md  obs.md  quickstart.md  state.md  testing.md
docs/examples/: event-snippets.md  goal-banner.md  scoreboard.md
examples/event-snippets/: index.html
examples/goal-banner/: index.html
examples/scoreboard/: index.html
manifest/: index.html
obs/: index.html
public/: overlay-api.js
quickstart/: index.html
search/: search_index.json
state/: index.html
testing/: index.html
tests/: conftest.py  test_api.py  test_overlay_registry.py  test_session_storage.py  test_state_manager.py  test_storage.py
ui/panel/: app.js  index.html  style.css
